--- a/phonegap/www/index.html
+++ b/phonegap/www/index.html
@@ -7,23 +7,33 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <script type="text/javascript" src="js/angular.min.js"></script>
-        <script type="text/javascript" src="js/ready.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/cordova.js"></script>
+
+        <script src="js/lib/angular.min.js"></script>
+        <script src="js/lib/moment.min.js"></script>
+        <script src="js/lib/moment-fr.js"></script>
+        <script src="js/lib/less-1.7.5.min.js"></script>
+
+        <script src="js/ready.js"></script>
+        <script src="js/index.js"></script>
         <title>HEIGre-doux</title>
     </head>
     <body ng-controller="mainCtrl">
-        <div class="app">
-            <h1>HEIGre-doux</h1>
-            <p>{{ hello }}</p>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+        <h1>HEIGre-doux</h1>
+        <div id="deviceready" class="blink">
+            <p class="event listening">Connecting to Device</p>
+            <p class="event received">Device is Ready</p>
+        </div>
+
+        <div id="days">
+            <div class="day" ng-repeat="d in dailyMenus">
+                {{ d.date }}
+                <div id="menus" ng-repeat="m in d.menus">
+                    <div>{{ m.frenchDate }}</div>
+                    <div class="aliment" ng-repeat="a in m.aliments">
+                        {{ a.name }} - {{ a.type.name }}
+                    </div>
+                </div>
             </div>
         </div>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
     </body>
 </html>
