--- a/phonegap/www/index.html
+++ b/phonegap/www/index.html
@@ -6,12 +6,14 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet/less" type="text/css" href="less/index.less">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet/less" href="less/index.less">
 
         <script src="js/lib/angular.min.js"></script>
         <script src="js/lib/moment.min.js"></script>
         <script src="js/lib/moment-fr.js"></script>
         <script src="js/lib/less-1.7.5.min.js"></script>
+        <script src="js/lib/ui-bootstrap.min.js"></script>
 
         <script src="js/ready.js"></script>
         <script src="js/index.js"></script>
@@ -27,17 +29,19 @@
             </div>
 
 
-            <div id="days">
-                <div class="day" ng-repeat="d in dailyMenus | orderBy: 'date' ">
-                    <h3 class="title">{{ d.frenchDate }}</h3>
-                    <div id="menus">
-                        <div class="menu" ng-repeat="m in d.menus">
-                            <div class="aliment" ng-repeat="a in m.aliments">
-                                {{ a.name }} - {{ a.type.name }} - {{ a.last | momentAgo }}
+            <div id="days" ng-controller="AccordionDemoCtrl">
+                <accordion close-others="oneAtATime">
+                    <accordion-group class="day" ng-repeat="d in dailyMenus | orderBy: 'date' " heading="{{ d.frenchDate }}">
+                        <h3 class="title">{{ d.frenchDate }}</h3>
+                        <div id="menus">
+                            <div class="menu" ng-repeat="m in d.menus">
+                                <div class="aliment" ng-repeat="a in m.aliments">
+                                    {{ a.name }} - {{ a.type.name }} - {{ a.last | momentAgo }}
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
+                    </accordion-group>
+                </accordion>
             </div>
         </div>
     </body>
