remove heading, open automatically today's menu

--- a/phonegap/www/index.html
+++ b/phonegap/www/index.html
@@ -31,8 +31,7 @@
 
             <div id="days" ng-controller="AccordionDemoCtrl">
                 <accordion close-others="oneAtATime">
-                    <accordion-group class="day" ng-repeat="d in dailyMenus | orderBy: 'date' " heading="{{ d.frenchDate }}">
-                        <h3 class="title">{{ d.frenchDate }}</h3>
+                    <accordion-group class="day" ng-repeat="d in dailyMenus | orderBy: 'date'" heading="{{ d.frenchDate }}" is-open="d.isOpen">
                         <div id="menus">
                             <div class="menu" ng-repeat="m in d.menus">
                                 <div class="aliment" ng-repeat="a in m.aliments">
