--- a/phonegap/www/admin.html
+++ b/phonegap/www/admin.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/select.min.css">
         <link rel="stylesheet/less" href="less/admin.less">
 
         <script src="js/lib/angular.min.js"></script>
@@ -15,6 +16,8 @@
         <script src="js/lib/moment-fr.js"></script>
         <script src="js/lib/less-1.7.5.min.js"></script>
         <script src="js/lib/ui-bootstrap.min.js"></script>
+        <script src="js/lib/select.min.js"></script>
+        <script src="js/lib/angular-sanitize.min.js"></script>
 
         <script src="js/ready.js"></script>
         <script src="js/admin.js"></script>
@@ -33,8 +36,8 @@
                                 <tr href="#" class="aliment" ng-repeat="a in m.aliments | orderBy: 'type.id'">
                                     <td ng-click="open(a.id)"><span ng-if="a.type.name == 'Sauce'">Sauce: </span>{{ a.name }}</td>
                                     <td>{{ a.type.name }}</td>
-                                    <td>{{ a.nutriments }}</td>
-                                    <td>{{ a | json}}</td>
+                                    <td><input class="form-control" ng-model="searches[a.id]" ng-change="getNutrimentsList(a)"></input></td>
+                                    <td><select class="form-control" ng-model="a.nutriments" ng-options="r as r.name for r in addNutriment(results[a.id], a.nutriments)" ng-change="updateNutriments(a)"></select></td>
                                 </tr>
                             </div>
                         </table>
